// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with isBusy prop 1`] = `
<styled.section>
  <styled.input
    className="urlInput"
    onChange={[Function]}
    type="text"
    value=""
  />
  <styled.button
    onClick={[Function]}
  >
    Generating...
  </styled.button>
</styled.section>
`;

exports[`renders correctly without isBusy prop 1`] = `
<styled.section>
  <styled.input
    className="urlInput"
    onChange={[Function]}
    type="text"
    value=""
  />
  <styled.button
    onClick={[Function]}
  >
    Generate short link
  </styled.button>
</styled.section>
`;
